          - Reports:
            - include any ok event always in availability calculation
          - Panorama View:
            - make popup completely customizable
            - add performance bar icon type
            - icon label can be mouseover only now
            - do not overlap icons which are placed close together
            - host status beats service status for group/filter icons

2.08     Fri May  6 11:29:14 CEST 2016
          - add status column to performance map excel export
          - accept filter changes on body clicks too
          - support wildcards for ssi files
          - use worst can_submit_commands value when having multiple backends
          - fix using negated comment/downtime filter
          - fix 'bad file descriptor' error when trying to log in subprocesses
          - fix using non-standard webserver ports with cookie authentication (#576)
          - fix url decoding problem on login page
          - Config Tool:
            - add list wizard to drop down
            - add user defined custom variables to attribute list, extra_custom_var_host and extra_custom_var_service
            - fix encodig when raw editing files (#572)
          - Panorama View:
            - reload dashboards if server was updated
            - add factor for speedometers
            - add support for hard states in icon states
            - add thresholds to speedometer
            - update wms provider list
            - fix background image offset not working properly
            - fix mixed up label offset x/y
          - Reports:
            - add report clone button
            - create debug information more easily
            - fix content type in url reports emails
          - CLI
            - add new graph command to export graphs from cli
            - add new listservices command

2.06     Wed Mar 02 16:08:00 CET 2016
          - make custom variables from show_custom_vars clickable
          - add eventhandler search option