@@ -1859,13 +1859,38 @@ sub _object_enable {
 sub _object_delete {
     my($c, $obj) = @_;
 
+    my $refs = $c->{'obj_db'}->get_references($obj);
     if(!$c->req->parameters->{'force'}) {
-        my $refs = $c->{'obj_db'}->get_references($obj);
         if(scalar keys %{$refs}) {
             Thruk::Utils::set_message( $c, 'fail_message', ucfirst($obj->get_type()).' has remaining references' );
             return $c->redirect_to('conf.cgi?sub=objects&action=listref&data.id='.$obj->get_id().'&show_force=1');
         }
     }
+
+    if($c->req->parameters->{'ref'}) {
+        my $name        = $obj->get_name();
+        my $refs_delete = Thruk::Utils::list($c->req->parameters->{'ref'});
+        for my $id (@{$refs_delete}) {
+            for my $type (keys %{$refs}) {
+                if($refs->{$type}->{$id}) {
+                    my $ref_obj = $c->{'obj_db'}->get_object_by_id($id);
+                    for my $attr (keys %{$refs->{$type}->{$id}}) {
+                        if(ref $ref_obj->{'conf'}->{$attr} eq 'ARRAY') {
+                            $ref_obj->{'conf'}->{$attr} = [grep(!/^\Q$name\E$/mx, @{$ref_obj->{'conf'}->{$attr}})];
+                        } elsif(ref $ref_obj->{'conf'}->{$attr} eq '') {
+                            delete $ref_obj->{'conf'}->{$attr};
+                        }
+                        $c->{'obj_db'}->update_object($ref_obj, $ref_obj->{'conf'});
+                        $ref_obj->{'file'}->{'changed'}  = 1;
+                        $c->{'obj_db'}->{'needs_commit'} = 1;
+                        # remove if its unused now
+                        $c->{'obj_db'}->delete_object($ref_obj) if($ref_obj->can('is_unused') && $ref_obj->is_unused($c->{'obj_db'}));
+                    }
+                }
+            }
+        }
+    }
+
     $c->{'obj_db'}->delete_object($obj);
     $c->stash->{'obj_model_changed'} = 1;
 
