@@ -1,36 +1,58 @@
 ﻿[% WRAPPER _conf_objects_frame.tt %]
 
+[% IF force_delete %]
+<form action="conf.cgi" method="POST">
+[% END %]
 <table border="0" class='data conftoolobj'>
   [% IF force_delete %]
   <tr>
-    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Incoming References of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
+    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Incoming references of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
   </tr>
   <tr>
     <td class='dataVar' style="text-align:center" colspan=2>
       <br>
       [% link = "conf.cgi?sub=objects&action=delete&force=1&data.id=" _ object.get_id() _ "&token=" _ get_user_token(c) %]
-      [% text = "Really delete this " _ object.get_type() | ucfirst %]
-      [% button(link, text, 'conf_delete_button') %]
-      <br>
-      [% object.get_type() | ucfirst %] has remaining references!
+      [% text = object.get_type() | ucfirst %]
+      [% text = "Delete this " _ text _ " and remove it from the selected references" %]
+      [% button(link, text, 'conf_delete_button', '', '', '', 1) %]
       <br>
       <br>
     </td>
   </tr>
   [% END %]
   <tr>
-    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Incoming References of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
+    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Incoming references of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
   </tr>
   [% FOREACH t = incoming.keys.sort %]
   <tr>
     <td class='dataVar'>[% t | ucfirst %]</td>
     <td class='dataVar'>
-      <ul>
+      <ul [% IF force_delete %]style="padding-left: 15px;"[% END %]>
       [% FOREACH name = incoming.$t.keys.sort %]
         [% oid = incoming.$t.$name %]
-        <li><a href="conf.cgi?sub=objects&amp;data.id=[% oid %]">[% name %]</a></li>
+        [% IF force_delete %]
+          <li style="list-style: none;">
+            <input type="checkbox" name="ref" value="[% oid %]" checked>
+            <a href="#" onclick="jQuery(this).prev().click(); jQuery('input[name=none]').prop('checked', false); return false;">[% name %]</a>
+            <a href="conf.cgi?sub=objects&amp;data.id=[% oid %]"><img src="[% url_prefix %]themes/[% theme %]/images/link.png" style="vertical-align: middle;"></a>
+          </li>
+        [% ELSE %]
+          <li><a href="conf.cgi?sub=objects&amp;data.id=[% oid %]">[% name %]</a></li>
+        [% END %]
       [% END %]
       </ul>
+    </td>
+  </tr>
+  [% END %]
+  [% IF force_delete %]
+  <tr>
+    <td class='dataVar'></td>
+    <td class='dataVar'>
+      select
+      <input type="checkbox" name="none" value="">
+      <a href="#" onclick="jQuery('input[name=ref]').prop('checked', false); jQuery('input[name=none]').prop('checked', true); jQuery('input[name=all]').prop('checked', false); return false;">none</a> -
+      <input type="checkbox" name="all" value="" checked>
+      <a href="#" onclick="jQuery('input[name=ref]').prop('checked', true); jQuery('input[name=none]').prop('checked', false); jQuery('input[name=all]').prop('checked', true); return false;">all</a>
     </td>
   </tr>
   [% END %]
@@ -40,8 +62,9 @@
   </tr>
   [% END %]
 
+[% IF !force_delete %]
   <tr>
-    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Outgoing References of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
+    <th class='data' colspan=2><a href="conf.cgi?sub=objects&amp;data.id=[% object.get_id() %]">Outgoing references of [% object.get_type() | ucfirst +%] [%+ object.get_name() %]</a></th>
   </tr>
   [% FOREACH t = outgoing.keys.sort %]
   <tr>
@@ -60,7 +83,11 @@
     <td class='dataVar' colspan=2 style="text-align: center;">No outgoing references found</td>
   </tr>
   [% END %]
+  [% END %]
 
 </table>
+[% IF force_delete %]
+</form>
+[% END %]
 
 [% END %]
